--- a/index.html
+++ b/index.html
@@ -45,18 +45,49 @@ body{
 
 
 <p><b>อาหารที่ชอบกิน</b>
-<li>KFC</li>
-<li>กระเพาหมูกรอบไข่ดาว</li>
-<li>ฟิซซา</li></p>
+<ul>
+<li><a href="#KFC">KFC</a></li>
+<li><a href="#KFC">ผัดกระเพา</a></li>
+<li><a href="#Pi">ฟิซซา</a></li>
+</ul>
 
-<hr>
+
+
+
 
 
 <p><b>เกมส์ยอดนิยม</b>
 <li><a href="file:///D:/พืชญานิน/rov.html">ROV</a></li>
+<dd>Realm Of Valor เป็นเกมส์ยอดนิยมในขณะนี้</dd>
 <li><a href="file:///D:/พืชญานิน/PUBG.html">PUBG</a></li>
+<dd>PLAYERUNKNOWN’S BATTLEGROUNDS เป็นเกมส์ยิงปืนที่ใหญ่ที่สุด</dd>
 </p>
 </ul>
+<hr>
+<br>
+
+<br>
+<center>
+<table border="1">
+<tr>
+<h2><font color="#FF3399"><a name="KFC">KFC</a></font></h2>
+<td><img src="KFC.jpg" width="800" height="500" > </td>
+</tr>
+</table>
+<p><a href="#top">Back to top</a></p>
+<p><a href="file:///D:/พืชญานิน/pichayanin.htm">Back to home</a></p>
+</center>
+
+<center>
+<table border="1">
+<tr>
+<h2><font color="#FF3399"><a name="Pi">PIZZA</a></font></h2>
+<td><img src="Pi.png" width="800" height="500" > </td>
+</tr>
+</table>
+<p><a href="#top">Back to top</a></p>
+<p><a href="file:///D:/พืชญานิน/pichayanin.htm">Back to home</a></p>
+</center>
 
 
 
