--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@ body{
 
 
 <p><b>เกมส์ยอดนิยม</b>
-<li><a href="file:///D:/พืชญานิน/rov.html">ROV</a></li>
+<li><a href="https://rov.in.th/">ROV</a></li>
 <dd>Realm Of Valor เป็นเกมส์ยอดนิยมในขณะนี้</dd>
-<li><a href="file:///D:/พืชญานิน/PUBG.html">PUBG</a></li>
+<li><a href="https://www.pubg.com/">PUBG</a></li>
 <dd>PLAYERUNKNOWN’S BATTLEGROUNDS เป็นเกมส์ยิงปืนที่ใหญ่ที่สุด</dd>
 </p>
 </ul>
