--- a/index1.htm
+++ b/index1.htm
@@ -122,7 +122,7 @@ body{
 <table border="1">
 <tr>
 <h2><font color="#FF3399"><a name="KFC">โรงเรียนท่ามะปราง  จังหวัดนครนายก </a></font></h2>
-<td><img src="KFC.jpg" width="450" height="350" > </td>
+<td><img src="88.jpg" width="450" height="350" > </td>
 <td><img src="c4.jpg" width="450" height="350" > </td>
 </tr>
 </table>
